--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@ layout: compress
     {% include head/custom.html %}
   </head>
 
-  <body>
+  <body style="background: url(/images/dust_scratches.png);">
 
     {% include browser-upgrade.html %}
     {% include masthead.html %}
