--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -9,6 +9,8 @@
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.15s;
           animation-delay: 0.15s;
+  background-color: $lighter-gray;
+  border-bottom: 1px solid $light-gray;
   z-index: 20;
 
   &__inner-wrap {
