--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -4,8 +4,8 @@
 
 <link rel="apple-touch-icon" sizes="180x180" href="{{ base_path }}/images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ base_path }}/images/favicon-32x32.png">
-<link rel="icon" type="image/png" href="{{ base_path }}/images/android-chrome-192x192.png" sizes="192x192">
-<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" sizes="192x192" href="{{ base_path }}/images/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="96x96" href="{{ base_path }}/images/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ base_path }}/images/favicon-16x16.png">
 <!-- <link rel="manifest" href="{{ base_path }}/images/manifest.json"> -->
 <link rel="manifest" href="{{ base_path }}/images/site.webmanifest">
