--- a/_includes/analytics-providers/custom.html
+++ b/_includes/analytics-providers/custom.html
@@ -1,12 +1,12 @@
 <!-- start custom analytics snippet -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-197363568-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X5EDWR5T7Q"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-197363568-1');
+  gtag('config', 'G-X5EDWR5T7Q');
 </script>
 
 <!-- end custom analytics snippet -->
