--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -32,7 +32,7 @@
         <li><i class="fa fa-fw fa-university" aria-hidden="true"></i> {{ author.university }}</li>
       {% endif %}
       {% if author.uri %}
-        <li><a href="{{ author.uri }}"><i class="fas fa-fw fa-link" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].website_label | default: "Website" }}</a></li>
+        <li><a href="{{ author.uri }}"><i class="fas fa-fw fa-link" aria-hidden="true"></i> {{author.mail}} </a></li>
       {% endif %}
       {% if author.email %}
       <!-- <li><i class="fas fa-fw fa-envelope" aria-hidden="true"></i><a href="mailto:{{ author.email }}"> {{ author.email }}</a></li>		
