--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -37,7 +37,7 @@
       {% if author.email %}
       <!-- <li><i class="fas fa-fw fa-envelope" aria-hidden="true"></i><a href="mailto:{{ author.email }}"> {{ author.email }}</a></li>		
       {% endif %}		 -->
-        <li><a href="mailto:{{ author.email }}"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].email_label }}</a></li>
+        <li><a href="mailto:{{ author.email }}"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> {{ author.email }} </a></li>
       {% endif %}
       {% if author.keybase %}
         <li><a href="https://keybase.io/{{ author.keybase }}"><i class="fas fa-fw fa-key" aria-hidden="true"></i> Keybase</a></li>
