--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -34,10 +34,11 @@
       {% if author.uri %}
         <li><a href="{{ author.uri }}"><i class="fas fa-fw fa-link" aria-hidden="true"></i> {{author.mail}} </a></li>
       {% endif %}
-      {% if author.email %}
-      <!-- <li><i class="fas fa-fw fa-envelope" aria-hidden="true"></i><a href="mailto:{{ author.email }}"> {{ author.email }}</a></li>		
+      <!--{% if author.email %}
+        <li><i class="fas fa-fw fa-envelope" aria-hidden="true"></i><a href="mailto:{{ author.email }}"> {{ author.email }}</a></li>		
       {% endif %}		 -->
-        <li><i class="fas fa-fw fa-envelope" aria-hidden="true"></i><a href="mailto:{{ author.email }}"> {{ author.email }} </a></li>
+      {% if author.email %}
+        <li><i class="fas fa-fw fa-envelope" aria-hidden="true"></i><a href="mailto:{{ author.email }}"> {{ author.email }}</a></li>
       {% endif %}
       {% if author.keybase %}
         <li><a href="https://keybase.io/{{ author.keybase }}"><i class="fas fa-fw fa-key" aria-hidden="true"></i> Keybase</a></li>
